@@ -46,43 +46,51 @@ Please select <b>ONE</b> recipient and <b>NO</b> publisher to generate content h
 	<div class="view_links">
 		<a href="" class="view" onclick="$('#generator_view').val('publisher_countries').trigger('chosen:updated').trigger('change');return false;" >
 			<img src="art/generator/countriesall.png" width="260"/>
-			<span>Recipients (table)</span>
+			<span class="imgtxt">Recipients (table)</span>
+			<span class="overtxt">Publisher data only</span>
 		</a><a href="" class="view mid" onclick="$('#generator_view').val('publisher_countries_top').trigger('chosen:updated').trigger('change');return false;" >
 			<img src="art/generator/crsdonortop.png" width="260"/>
-			<span>Top Recipients (graph)</span>
+			<span class="imgtxt">Top Recipients (graph)</span>
+			<span class="overtxt">Publisher data only</span>
 		</a><a href="" class="view" onclick="$('#generator_view').val('publisher_sectors').trigger('chosen:updated').trigger('change');return false;" >
 			<img src="art/generator/countriesall.png" width="260"/>
-			<span>Sectors (table)</span>
+			<span class="imgtxt">Sectors (table)</span>
+			<span class="overtxt">Publisher data only</span>
 		</a>	
 	</div>	
 	<div class="view_links">
 		<a href="" class="view" onclick="$('#generator_view').val('publisher_sectors_top').trigger('chosen:updated').trigger('change');return false;" >
 			<img src="art/generator/crssectortop.png" width="260"/>
-			<span>Top Sectors (graph)</span>
+			<span class="imgtxt">Top Sectors (graph)</span>
+			<span class="overtxt">Publisher data only</span>
 		</a><a href="" class="view mid" onclick="$('#generator_view').val('map').trigger('chosen:updated').trigger('change');return false;" >
 			<img src="art/generator/map.png" width="260"/>
-			<span>Map (only shows precise locations of activities)</span>
+			<span class="imgtxt">Map (only shows precise locations of activities)</span>
 		</a><a href="" class="view" onclick="$('#generator_view').val('stats').trigger('chosen:updated').trigger('change');return false;" >
 			<img src="art/generator/overview.png" width="260"/>
-			<span>Overview (statistics)</span>
+			<span class="imgtxt">Overview (statistics)</span>
 		</a>
 	</div>
 	<div class="view_links">
 		<a href="" class="view" onclick="$('#generator_view').val('donors').trigger('chosen:updated').trigger('change');return false;" >
 			<img src="art/generator/countriesall.png" width="260"/>
-			<span>Donors for a single recipient (table)</span>
+			<span class="imgtxt">Donors for a single recipient (table)</span>
+			<span class="overtxt">Recipient data only</span>
 		</a><a href="" class="view mid" onclick="$('#generator_view').val('donors_top').trigger('chosen:updated').trigger('change');return false;" >
 			<img src="art/generator/crsdonortop.png" width="260"/>
-			<span>Top Donors for a single recipient (graph)</span>
+			<span class="imgtxt">Top Donors for a single recipient (graph)</span>
+			<span class="overtxt">Recipient data only</span>
 		</a><a href="" class="view" onclick="$('#generator_view').val('sectors').trigger('chosen:updated').trigger('change');return false;" >
 			<img src="art/generator/countriesall.png" width="260"/>
-			<span>Sectors for a single recipient (table)</span>
+			<span class="imgtxt">Sectors for a single recipient (table)</span>
+			<span class="overtxt">Recipient data only</span>
 		</a>
 	</div>
 	<div class="view_links">
 		<a href="" class="view" onclick="$('#generator_view').val('sectors_top').trigger('chosen:updated').trigger('change');return false;" >
 			<img src="art/generator/crssectortop.png" width="260"/>
-			<span>Top Sectors for a single recipient (graph)</span>
+			<span class="imgtxt">Top Sectors for a single recipient (graph)</span>
+			<span class="overtxt">Recipient data only</span>
 		</a>
 	</div>
 </div>
@@ -177,8 +185,11 @@ a#frame_fix_size:hover	{background-color:#2F84E5;}
 .view_info			{padding-bottom:10px; color:#fff; font-size:0.9em; border-bottom:3px solid #666; margin-bottom:10px;}
 .view_wrap			{display:inline-block; vertical-align:top; width:840px; margin-left:110px;}
 .view_links			{margin-bottom:20px;}
-a.view				{display:inline-block; vertical-align:top; width:260px;}
+a.view				{display:inline-block; vertical-align:top; width:260px; position:relative;}
 a.view.mid			{margin:0 30px;}
-a.view span			{display:block; margin-top:5px; color:#ccc; font-size:0.8em;}
+a.view span.imgtxt	{display:block; margin-top:5px; color:#ccc; font-size:0.8em;}
 a.mail				{display:block; margin-top:15px; color:#4CA0FF; padding:5px 0;}
 a.mail:hover		{color:#74B5FF;}
+
+span.overtxt		{display:none;}
+a.view:hover span.overtxt	{display:block; position:absolute; top:0; left:0; width:260px; height:119px; background-color:rgba(0,0,0,0.6); color:#fff; text-align:center; line-height:6em;}
