@@ -1,6 +1,7 @@
 Development Portal (2014-09-22 shi)
 ==============================
 Link rearranged
+Added hover text for generator screenshots
 
 
 Development Portal (2014-09-10 shi)
